# covid19

./: .flake8  .gitignore  Dockerfile  Makefile  README.rst  app.py  config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml  test.yml
assets/: header.md  style.css
covid19/: __init__.py  app.py  callbacks.py  data.py  layout.py  plots.py  stats.py  types.py  utils.py
covid19/plots/: callbacks.py  infections.py  layout.py
hooks/: pre-commit
resources/: country_mappings.json
tests/: test_covid19.py
