[tool.poetry]
name = "covid19"
version = "0.1.0"
description = "COVID-19 exploratory dashboard"
authors = ["Ivan Rivera <ivan.s.rivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
pytest = "^5.4.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
